--- a/pages/landing-4.html
+++ b/pages/landing-4.html
@@ -550,7 +550,7 @@
   </div>
   <!-- / Block -->
 
-  <!-- Block -->
+  <!--  block 
   <div id="subscribe" class="bg-secondary text-white py-5">
     <div class="container px-3">
       <div class="row align-items-center">
@@ -585,25 +585,25 @@
       <hr class="mb-4">
       <div class="row">
         <div class="col-6 col-sm pb-4">
-          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">ABOUT US</div>
+          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">SOBRE NÓS</div>
           <a href="#" class="footer-link d-block small pb-2">About</a>
           <a href="#" class="footer-link d-block small pb-2">Our Story</a>
           <a href="#" class="footer-link d-block small pb-2">Careers</a>
         </div>
         <div class="col-6 col-sm pb-4">
-          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">SUPPORT</div>
+          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">SUPORTE</div>
           <a href="#" class="footer-link d-block small pb-2">FAQ</a>
           <a href="#" class="footer-link d-block small pb-2">Support</a>
           <a href="#" class="footer-link d-block small pb-2">Consultant</a>
         </div>
         <div class="col-6 col-sm pb-4">
-          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">PARTNERS</div>
+          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">PARCEIROS</div>
           <a href="#" class="footer-link d-block small pb-2">Wholesale</a>
           <a href="#" class="footer-link d-block small pb-2">Office solutions</a>
           <a href="#" class="footer-link d-block small pb-2">Press Resource</a>
         </div>
         <div class="col-6 col-sm pb-4">
-          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">CONNECT</div>
+          <div class="footer-text font-secondary text-tiny font-weight-bold mb-3">SOCIAL</div>
           <a href="#" class="footer-link d-block small pb-2">
           <i class="ion ion-logo-twitter text-twitter"></i> &nbsp;Twitter</a>
           <a href="#" class="footer-link d-block small pb-2">
