--- a/pages/landing-4.html
+++ b/pages/landing-4.html
@@ -247,7 +247,7 @@
     <div class="container px-3">
 
       <div class="col-md-10 col-lg-8 col-xl-7 text-center p-0 mx-auto">
-        <div class="text-lighter text-tiny font-weight-bold mb-3">CURSOS</div>
+        <div class="text-lighter text-tiny font-weight-bold mb-3">NOSSOS SERVIÇOS</div>
         <h1 class="display-4 font-secondary font-weight-semibold mb-4">
           Conheça mais sobre nosso treinamentos e consultorias
         </h1>
