--- a/pages/landing-4.html
+++ b/pages/landing-4.html
@@ -97,7 +97,7 @@
 
             <div class="col-lg-7 col-xl-6 text-lg-left text-center my-5">
               <h1 class="display-3 font-secondary font-weight-bold mb-4">
-                Os treinamentos que você precisa esta aqui!
+                Os treinamentos que você precisa estão aqui!
               </h1>
               <p class="lead pb-3">
                 Profissinais altamente qualificados para oferecer os melhores treinamentos e consultorias.
@@ -109,9 +109,10 @@
 
             <div class="col-lg-5 text-center pl-lg-5">
               <div class="ui-presentation-right ui-device macbook float-left rounded">
-                <img class="device-img" src="https://assets.xtechcommerce.com/uploads/images/full/d4ff9ffa5e4745f7280ac970420b19b4.jpg" alt>
+                <img class="device-img" src="assets/img/devices/macbook-gold.png" alt="">
+                
                 <div class="device-content">
-                  
+                  <img class="device-img" src="https://assets.xtechcommerce.com/uploads/images/full/d4ff9ffa5e4745f7280ac970420b19b4.jpg" alt>
                 </div>
               </div>
             </div>
